test/integration/ingress/manifests/basic/named_port/http-echo.yaml
kind: Service
apiVersion: v1
metadata:
  name: http-echo
spec:
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8888
  selector:
    app: http-echo
